--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script|Fredoka+One|Luckiest+Guy|Monoton&display=swap" rel="stylesheet">
+    <link href="css/peutcook.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="row contact-us">
+        <div class="col-md-12">
+          <h3 id="m2">CONTACT US.</h3>
+        </div>
+        <div class="col-md-12">
+          <a href="https://www.facebook.com" >
+            <img src="images/icons8-facebook-50.png"></a>
+          <a href="https://wa.me/254717976042">
+            <img src="images/icons8-whatsapp-50.png"></a>
+          <a href="Tel: +254717976042" class="btn">
+            <img src="images/icons8-phone-50 (1).png"></a>
+        </div>
+      </div>
 </body>
 </html>
