Add New Radio Buttons to create vegetable category in recipes.html

--- a/recipes.html
+++ b/recipes.html
@@ -37,6 +37,27 @@
             <input type="radio" name="action" id="parmesan" value="parmesan">
             <label for="parmesan">Parmesan</label></br>
           </fieldset>
+          <h2>Vegetables</h2>
+          <fieldset>
+              <input type="radio" name="action" id="tomatoes" value="tomatoes">
+              <label for="tomatoes">Tomatoes</label></br>
+              <input type="radio" name="action" id="cabbage" value="cabbage">
+              <label for="cabbage">Cabbage</label></br>
+              <input type="radio" name="action" id="brocolli" value="brocolli">
+              <label for="brocolli">Brocolli</label></br>
+              <input type="radio" name="action" id="cauliflower" value="cauliflower">
+              <label for="cauliflower">Cauliflower</label></br>
+              <input type="radio" name="action" id="spinach" value="spinach">
+              <label for="spinach">Spinach</label></br>
+              <input type="radio" name="action" id="sukuma" value="sukuma">
+              <label for="sukuma">Sukuma</label></br>
+              <input type="radio" name="action" id="onion" value="onion">
+              <label for="onion">Onion</label>
+              <input type="radio" name="action" id="garlic" value="garlic">
+              <label for="garlic">Garlic</label></br>
+              <input type="radio" name="action" id="tangawizi" value="tangawizi">
+              <label for="tangawizi">Tangawizi</label></br> 
+          </fieldset>
         </div>
       </div>
     </div>
