--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -16,30 +16,30 @@
         <div class="col-md-6">
           <h2>Flour & Grains</h2>
           <fieldset>
-            <input type="radio" name="action" id="rice" value="rice">
+            <input type="radio" name="rice" id="rice" value="rice">
             <label for="rice">Rice</label></br>
-            <input type="radio" name="action" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
+            <input type="radio" name="flour" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
             <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
-            <input type="radio" name="action" id="maizeFlour" value="maizeFlour">
+            <input type="radio" name="mflour" id="maizeFlour" value="maizeFlour">
             <label for="maizeFlour">MaizeFlour</label></br>
-            <input type="radio" name="action" id="spaghetti" value="spaghetti">
+            <input type="radio" name="spaghetti" id="spaghetti" value="spaghetti">
             <label for="spaghetti">Spaghetti</label></br>
-            <input type="radio" name="action" id="beans" value="beans">
+            <input type="radio" name="beans" id="beans" value="beans">
             <label for="beans">Beans</label></br>
-            <input type="radio" name="action" id="lentils" value="lentils">
+            <input type="radio" name="lentils" id="lentils" value="lentils">
             <label for="lentils">Lentils</label></br>
-            <input type="radio" name="action" id="blackbeans" value="blackbeans">
+            <input type="radio" name="blackbeans" id="blackbeans" value="blackbeans">
             <label for="blackbeans">Black Beans</label>
           </fieldset>
           <h2>Dairy</h2>
           <fieldset>
-            <input type="radio" name="action" id="milk" value="milk">
+            <input type="radio" name="milk" id="milk" value="milk">
             <label for="milk">Milk</label></br>
-            <input type="radio" name="action" id="eggs" value="eggs">
+            <input type="radio" name="eggs" id="eggs" value="eggs">
             <label for="eggs">Eggs</label></br>
-            <input type="radio" name="action" id="cheddar" value="cheddar">
+            <input type="radio" name="cheddar" id="cheddar" value="cheddar">
             <label for="cheddar">Cheddar</label></br>
-            <input type="radio" name="action" id="parmesan" value="parmesan">
+            <input type="radio" name="parmesan" id="parmesan" value="parmesan">
             <label for="parmesan">Parmesan</label></br>
           </fieldset>
         </div>
