--- a/recipes.html
+++ b/recipes.html
@@ -39,23 +39,23 @@
           </fieldset>
           <h2>Vegetables</h2>
           <fieldset>
-              <input type="radio" name="action" id="tomatoes" value="tomatoes">
+              <input type="radio" name="tomatoes" id="tomatoes" value="tomatoes">
               <label for="tomatoes">Tomatoes</label></br>
-              <input type="radio" name="action" id="cabbage" value="cabbage">
+              <input type="radio" name="cabbage" id="cabbage" value="cabbage">
               <label for="cabbage">Cabbage</label></br>
-              <input type="radio" name="action" id="brocolli" value="brocolli">
+              <input type="radio" name="brocolli" id="brocolli" value="brocolli">
               <label for="brocolli">Brocolli</label></br>
-              <input type="radio" name="action" id="cauliflower" value="cauliflower">
+              <input type="radio" name="cauliflower" id="cauliflower" value="cauliflower">
               <label for="cauliflower">Cauliflower</label></br>
-              <input type="radio" name="action" id="spinach" value="spinach">
+              <input type="radio" name="spinach" id="spinach" value="spinach">
               <label for="spinach">Spinach</label></br>
-              <input type="radio" name="action" id="sukuma" value="sukuma">
+              <input type="radio" name="sukuma" id="sukuma" value="sukuma">
               <label for="sukuma">Sukuma</label></br>
-              <input type="radio" name="action" id="onion" value="onion">
+              <input type="radio" name="onion" id="onion" value="onion">
               <label for="onion">Onion</label>
-              <input type="radio" name="action" id="garlic" value="garlic">
+              <input type="radio" name="garlic" id="garlic" value="garlic">
               <label for="garlic">Garlic</label></br>
-              <input type="radio" name="action" id="tangawizi" value="tangawizi">
+              <input type="radio" name="tangawizi" id="tangawizi" value="tangawizi">
               <label for="tangawizi">Tangawizi</label></br> 
           </fieldset>
         </div>
