Align flour and grains title center

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -14,7 +14,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2>Flour & Grains</h2>
+          <h2 style="text-align: center;">Flour & Grains</h2>
           <fieldset>
             <input type="radio" name="rice" id="rice" value="rice">
             <label for="rice">Rice</label></br>
