Added new characters and spacing

--- a/recipes.html
+++ b/recipes.html
@@ -37,7 +37,7 @@
             <input type="radio" name="action" id="parmesan" value="parmesan">
             <label for="parmesan">Parmesan</label></br>
           </fieldset>
-          <h2>Vegetables</h2>
+          <h2>Vegetables Category</h2>
           <fieldset>
               <input type="radio" name="tomatoes" id="tomatoes" value="tomatoes">
               <label for="tomatoes">Tomatoes</label></br>
