--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -42,6 +42,25 @@
             <input type="radio" name="action" id="parmesan" value="parmesan">
             <label for="parmesan">Parmesan</label></br>
           </fieldset>
+                <input type="radio" name="tomatoes" id="tomatoes" value="tomatoes">
+              <label for="tomatoes">Tomatoes</label></br>
+              <input type="radio" name="cabbage" id="cabbage" value="cabbage">
+              <label for="cabbage">Cabbage</label></br>
+              <input type="radio" name="brocolli" id="brocolli" value="brocolli">
+              <label for="brocolli">Brocolli</label></br>
+              <input type="radio" name="cauliflower" id="cauliflower" value="cauliflower">
+              <label for="cauliflower">Cauliflower</label></br>
+              <input type="radio" name="spinach" id="spinach" value="spinach">
+              <label for="spinach">Spinach</label></br>
+              <input type="radio" name="sukuma" id="sukuma" value="sukuma">
+              <label for="sukuma">Sukuma</label></br>
+              <input type="radio" name="onion" id="onion" value="onion">
+              <label for="onion">Onion</label>
+              <input type="radio" name="garlic" id="garlic" value="garlic">
+              <label for="garlic">Garlic</label></br>
+              <input type="radio" name="tangawizi" id="tangawizi" value="tangawizi">
+              <label for="tangawizi">Tangawizi</label></br> 
+          </fieldset>
         </div>
       </div>
     </div>
