--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -42,24 +42,43 @@
             <input type="radio" name="action" id="parmesan" value="parmesan">
             <label for="parmesan">Parmesan</label></br>
           </fieldset>
-                <input type="checkbox" name="tomatoes" id="tomatoes" value="tomatoes">
+          <legend>Choose your vegetables</legend>
+          <div>
+                <input type="radio" name="vegetables" id="tomatoes" value="tomatoes">
               <label for="tomatoes">Tomatoes</label></br>
-              <input type="checkbox" name="cabbage" id="cabbage" value="cabbage">
+              </div>
+              <div>
+              <input type="radio" name="cabbage" id="cabbage" value="cabbage">
               <label for="cabbage">Cabbage</label></br>
-              <input type="checkbox" name="brocolli" id="brocolli" value="brocolli">
+              </div>
+              <div>
+              <input type="radio" name="brocolli" id="brocolli" value="brocolli">
               <label for="brocolli">Brocolli</label></br>
-              <input type="checkbox" name="cauliflower" id="cauliflower" value="cauliflower">
+              </div>
+              <div>
+              <input type="radio" name="cauliflower" id="cauliflower" value="cauliflower">
               <label for="cauliflower">Cauliflower</label></br>
-              <input type="checkbox" name="spinach" id="spinach" value="spinach">
+              </div>
+              <div>
+              <input type="radio" name="spinach" id="spinach" value="spinach">
               <label for="spinach">Spinach</label></br>
-              <input type="checkbox" name="sukuma" id="sukuma" value="sukuma">
+              </div>
+              <div>
+              <input type="radio" name="sukuma" id="sukuma" value="sukuma">
               <label for="sukuma">Sukuma</label></br>
-              <input type="checkbox" name="onion" id="onion" value="onion">
+              </div>
+              <div>
+              <input type="radio" name="onion" id="onion" value="onion">
               <label for="onion">Onion</label>
-              <input type="checkbox" name="garlic" id="garlic" value="garlic">
+              </div>
+              <div>
+              <input type="radio" name="garlic" id="garlic" value="garlic">
               <label for="garlic">Garlic</label></br>
-              <input type="checkbox" name="tangawizi" id="tangawizi" value="tangawizi">
+              </div>
+              <div>
+              <input type="radio" name="tangawizi" id="tangawizi" value="tangawizi">
               <label for="tangawizi">Tangawizi</label></br> 
+              </div>
           </fieldset>
         </div>
       </div>
