--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -1,69 +1,74 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
+  <div class="title">
+    <title>Recipes</title>
+  </div>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="/css/recipes.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <div class="container">
     <div class="title">
-      <title>Recipes</title>
+      <h1 style="color:white;">Recipes</h1>
     </div>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/css/recipes.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="title">
-        <h1 style="color:white;">Recipes</h1>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <h2>Flour & Grains</h2>
-          <fieldset>
-            <input type="radio" name="action" id="rice" value="rice">
-            <label for="rice">Rice</label></br>
-            <input type="radio" name="action" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
-            <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
-            <input type="radio" name="action" id="maizeFlour" value="maizeFlour">
-            <label for="maizeFlour">MaizeFlour</label></br>
-            <input type="radio" name="action" id="spaghetti" value="spaghetti">
-            <label for="spaghetti">Spaghetti</label></br>
-            <input type="radio" name="action" id="beans" value="beans">
-            <label for="beans">Beans</label></br>
-            <input type="radio" name="action" id="lentils" value="lentils">
-            <label for="lentils">Lentils</label></br>
-            <input type="radio" name="action" id="blackbeans" value="blackbeans">
-            <label for="blackbeans">Black Beans</label>
-          </fieldset>
-          <h2 style="text-align: center;">Dairy</h2>
-          <fieldset>
-            <input type="radio" name="action" id="milk" value="milk">
-            <label for="milk">Milk</label></br>
-            <input type="radio" name="action" id="eggs" value="eggs">
-            <label for="eggs">Eggs</label></br>
-            <input type="radio" name="action" id="cheddar" value="cheddar">
-            <label for="cheddar">Cheddar</label></br>
-            <input type="radio" name="action" id="parmesan" value="parmesan">
-            <label for="parmesan">Parmesan</label></br>
-          </fieldset>
-          <h3 style="text-align: center;">Type of Meat..</h3>
-          <fieldset>
-            <div>
-                <input type="radio" id="beef" name="beef" value="meat">
-                <label for="beef"> Beaf</label><br>
-
-                <input type="radio" id="chicken" name="chicken" value="meat">
-                <label for="beef"> Chicken</label><br>
-
-                <input type="radio" id="cowmeat" name="cowmeat" value="meat">
-                <label for="beef"> Cow Meat</label><br>
-
-                <input type="radio" id="fish" name="fish" value="meat">
-                <label for="fish"> Fish</label><br>
-
-                <input type="radio" id="pork" name="pork" value="meat">
-                <label for="pork"> Pork</label><br>
-            </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Flour & Grains</h2>
+        <fieldset>
+          <input type="radio" name="action" id="rice" value="rice">
+          <label for="rice">Rice</label></br>
+          <input type="radio" name="action" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
+          <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
+          <input type="radio" name="action" id="maizeFlour" value="maizeFlour">
+          <label for="maizeFlour">MaizeFlour</label></br>
+          <input type="radio" name="action" id="spaghetti" value="spaghetti">
+          <label for="spaghetti">Spaghetti</label></br>
+          <input type="radio" name="action" id="beans" value="beans">
+          <label for="beans">Beans</label></br>
+          <input type="radio" name="action" id="lentils" value="lentils">
+          <label for="lentils">Lentils</label></br>
+          <input type="radio" name="action" id="blackbeans" value="blackbeans">
+          <label for="blackbeans">Black Beans</label>
         </fieldset>
-        
-        </div>
+        <h2 style="text-align: center;">Dairy</h2>
+        <fieldset>
+          <input type="radio" name="action" id="milk" value="milk">
+          <label for="milk">Milk</label></br>
+          <input type="radio" name="action" id="eggs" value="eggs">
+          <label for="eggs">Eggs</label></br>
+          <input type="radio" name="action" id="cheddar" value="cheddar">
+          <label for="cheddar">Cheddar</label></br>
+          <input type="radio" name="action" id="parmesan" value="parmesan">
+          <label for="parmesan">Parmesan</label></br>
+        </fieldset>
+        <h3 style="text-align: center;">Type of Meat..</h3>
+        <fieldset>
+          <div>
+            <input type="radio" id="beef" name="beef" value="meat">
+            <label for="beef"> Beaf</label><br>
+
+            <input type="radio" id="chicken" name="chicken" value="meat">
+            <label for="beef"> Chicken</label><br>
+
+            <input type="radio" id="cowmeat" name="cowmeat" value="meat">
+            <label for="beef"> Cow Meat</label><br>
+
+            <input type="radio" id="fish" name="fish" value="meat">
+            <label for="fish"> Fish</label><br>
+
+            <input type="radio" id="pork" name="pork" value="meat">
+            <label for="pork"> Pork</label><br>
+          </div>
+        </fieldset>
+        <div id="button">
+          <button type="submit" class="btn btn-primary">Submit</button></div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
