Added meat button

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -57,6 +57,10 @@
           <h3 style="text-align: center;">Type of Meat..</h3>
           <fieldset>
             <div>
+              
+              <input type="radio" id="beef" name="beef" value="meat">
+                <label for="beef"> Beaf</label><br>  
+
             <input type="radio" id="chicken" name="chicken" value="meat">
             <label for="beef"> Chicken</label><br>
 
