--- a/index.html
+++ b/index.html
@@ -1,28 +1,69 @@
 <!DOCTYPE html>
-  <head>
-    <title>ICanCook</title>
-    <link href="css/peutcook.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script|Fredoka+One|Luckiest+Guy|Monoton&display=swap" rel="stylesheet">
-  </head>
-   <body>
-    <div class="row contact-us">
-        <div class="col-md-12">
-          <h3 id="m2">CONTACT US.</h3>
+
+<head>
+  <title>ICanCook</title>
+  <link href="css/peutcook.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link
+    href="https://fonts.googleapis.com/css?family=Anton|Dancing+Script|Fredoka+One|Luckiest+Guy|Monoton&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <Ol>
+    <div class="first">
+      <li><a href="#one">HOME</a></li>
+      <li><a href="#recipe">RECIPES</a></li>
+    </div>
+  </Ol>
+  <div class="containerOne">
+    <div id="carouselHome" class="carousel slide" data-ride="carousel">
+      <ol>
+        <li data-target="#carouselHome" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselHome" data-slide-to="1"></li>
+        <li data-target="#carouselHome" data-slide-to="2"></li>
+        <li data-target="#carouselHome" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d block w-100" src="images/food1.jpg" alt="Fish Stew">
         </div>
-        <div class="col-md-12">
-          <a href="https://www.facebook.com" >
-            <img src="images/icons8-facebook-50.png"></a>
-          <a href="https://wa.me/254717976042">
-            <img src="images/icons8-whatsapp-50.png"></a>
-          <a href="Tel: +254717976042" class="btn">
-            <img src="images/icons8-phone-50 (1).png"></a>
+        <div class="carousel-item">
+          <img class="d block w-100" src="images/food2.jpg" alt="Picture of pilau">
+        </div>
+        <div class="carousel-item">
+          <img class="d block w-100" src="images/food3.jpg" alt="Picture of Ugali and Stew">
+        </div>
+        <div class="carousel-item">
+          <img class="d block w-100" src="images/food4.jpg" alt="Rice and Stew">
         </div>
       </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="crossorigin="anonymous"></script>
-    <script src="js/peutcook.js"></script>
-   </body>
+      <a class="carousel-control-prev" href="#carouselHome" role="button" data-slide="prev"><span
+          class="carousel-control-prev-icon"></span></a>
+      <a class="carousel-control-next" href="#carouselHome" role="button" data-slide="next"><span
+          class="carousel-control-next-icon"></span></a>
+
+    </div>
+  </div>
+  <div class="row contact-us">
+    <div class="col-md-12">
+      <h3 id="m2">CONTACT US.</h3>
+    </div>
+    <div class="col-md-12">
+      <a href="https://www.facebook.com">
+        <img src="images/icons8-facebook-50.png"></a>
+      <a href="https://wa.me/254717976042">
+        <img src="images/icons8-whatsapp-50.png"></a>
+      <a href="Tel: +254717976042" class="btn">
+        <img src="images/icons8-phone-50 (1).png"></a>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
+  <script src="js/peutcook.js"></script>
+</body>
+
 </html>
