--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <Ol>
     <div class="first">
-      <li><a href="#one">HOME</a></li>
+      <li><a href="recipes/recipes.html">HOME</a></li>
       <li><a href="#recipe">RECIPES</a></li>
     </div>
   </Ol>
