--- a/eugene.html
+++ b/eugene.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <h3 style="text-align: center;">Type of Meat..</h3>
+            <h3 style="text-align: center;"><marquee behaviour="diaspora" width="100px" height="px">Type of Meat..</marquee></h3>
         </div>
         <fieldset>
             <div>
@@ -40,7 +40,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <script src="./eugene.js"></script>
+    <script src="/js/peutcook.js"></script>
 </body>
 
 </html>
