--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -22,8 +22,8 @@
             <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
             <input type="radio" name="mflour" id="maizeFlour" value="maizeFlour">
             <label for="maizeFlour">MaizeFlour</label></br>
-            <input type="radio" name="spaghetti" id="spaghetti" value="spaghetti">
-            <label for="spaghetti">Spaghetti</label></br>
+            <input type="radio" name="pasta" id="pasta" value="pasta">
+            <label for="pasta">Pasta</label></br>
             <input type="radio" name="beans" id="beans" value="beans">
             <label for="beans">Beans</label></br>
             <input type="radio" name="lentils" id="lentils" value="lentils">
@@ -41,24 +41,28 @@
             <label for="cheddar">Cheddar</label></br>
             <input type="radio" name="parmesan" id="parmesan" value="parmesan">
             <label for="parmesan">Parmesan</label></br>
+            <input type="radio" name="yogurt" id="yogurt" value="yogurt">
+            <label for="yogurt">Yogurt</label></br>
+            <input type="radio" name="coconutMilk" id="coconutMilk" value="coconutMilk">
+            <label for="coconutMilk">Coconut Milk</label></br>
           </fieldset>
           <h3 style="text-align: center;">Type of Meat..</h3>
           <fieldset>
             <div>
-                <input type="radio" id="beef" name="beef" value="meat">
-                <label for="beef"> Beaf</label><br>
+              <input type="radio" id="beef" name="beef" value="meat">
+              <label for="beef"> Beaf</label><br>
 
-                <input type="radio" id="chicken" name="chicken" value="meat">
-                <label for="beef"> Chicken</label><br>
+              <input type="radio" id="chicken" name="chicken" value="meat">
+              <label for="beef"> Chicken</label><br>
 
-                <input type="radio" id="cowmeat" name="cowmeat" value="meat">
-                <label for="beef"> Cow Meat</label><br>
+              <input type="radio" id="cowmeat" name="cowmeat" value="meat">
+              <label for="beef"> Cow Meat</label><br>
 
-                <input type="radio" id="fish" name="fish" value="meat">
-                <label for="fish"> Fish</label><br>
+              <input type="radio" id="fish" name="fish" value="meat">
+              <label for="fish"> Fish</label><br>
 
-                <input type="radio" id="pork" name="pork" value="meat">
-                <label for="pork"> Pork</label><br>
+              <input type="radio" id="pork" name="pork" value="meat">
+              <label for="pork"> Pork</label><br>
             </div>
         </fieldset>
         
