--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <div class="title">
-      <title>Recipes</title>
-    </div>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/css/recipes.css" rel="stylesheet" type="text/css">
+    <title>Recipes</title>
+    <link href="css/recipes.css" rel="stylesheet">
+
   </head>
   <body>
     <div class="container">
-      <div class="title">
-        <h1 style="color:white;">Recipes</h1>
-      </div>
+      <h1 style="text-align: center;">Recipes</h1>
       <div class="row">
         <div class="col-md-6">
           <h2>Flour & Grains</h2>
@@ -46,4 +42,5 @@
       </div>
     </div>
   </body>
+  <script src="../"
 </html>
