link sweet alert cdn and use sweet alert to notify users when they sign in, add space between contact us icons

--- a/index.html
+++ b/index.html
@@ -53,17 +53,22 @@
         <div class="col-md-12">
           <h3 id="m2">CONTACT US.</h3>
         </div>
-        <div class="col-md-12">
+        <div id="facebook">
           <a href="https://www.facebook.com" >
             <img src="images/icons8-facebook-50.png"></a>
+        </div>
+        <div id="whatsapp">
           <a href="https://wa.me/254717976042">
             <img src="images/icons8-whatsapp-50.png"></a>
+          </div>
+          <div id="phone">
           <a href="Tel: +254717976042" >
-            <img src="images/icons8-phone-50 (1).png"></a>
+            <img src="images/icons8-phone-50(1).png"></a>
         </div>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.js"  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="crossorigin="anonymous"></script>
     <script src="js/peutcook.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
    </body>
 </html>
