Use control flows and logical operators to determine the results that users will view after they submit their ingredients

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -5,7 +5,7 @@
       <title>Recipes</title>
     </div>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/css/recipes.css" rel="stylesheet" type="text/css">
+    <link href="css/recipes.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
