--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -130,16 +130,20 @@
             <h3 style="text-align: center;">Meat</h3>
             <fieldset>
               <div>
-                <input type="radio" id="chicken" name="chicken" value="meat">
+                <input type="radio" id="chicken" name="chicken" value="chicken">
                 <label for="chicken">Chicken</label><br>
 
                 <input type="radio" id="bacon" name="bacon" value="bacon">
                 <label for="bacon">Bacon</label><br>
 
-                <input type="radio" id="fish" name="fish" value="meat">
+                <input type="radio" id="beef" name="beef" value="beef">
+                <label for="bacon">Bacon</label><br>
+
+
+                <input type="radio" id="fish" name="fish" value="fish">
                 <label for="fish">Fish</label><br>
 
-                <input type="radio" id="pork" name="pork" value="meat">
+                <input type="radio" id="pork" name="pork" value="pork">
                 <label for="pork">Pork</label><br>
               </div>
             </fieldset>
