Change recipes.html background color to ensure visibility of text, create variable and assign CheckOut function as its value, use jQuery to return hyperlinked link

--- a/index.html
+++ b/index.html
@@ -84,24 +84,21 @@
     </div>
     <div id="about">
       <h2 style="padding-top: 30px; font-size: 30px; text-align: center;">About Us</h2>
-      <p style="font-size: 20px; text-align: center;">We are an online community that understands the struggle of
-        preparing healthy, nutricious meals while also maintaining a busy lifestyle. I Can Cook offers simple solutions to
-        unhealthy eating habits while also ensuring that the outcome is still pleasant. We find websites that offer these
-        recipes and provide direct links to them. The preparations for these meals are not too long or complicated. We
-        ensure that the lits of ingredients are common and easy to access. Our aim is to help people find ways to enjoy
-        they're food even when they may not have the resources or the time to prepare such complex meals that require rare
-        and expensive components. </p>
+      <p>We are an online community that understands the struggle of  preparing healthy, nutricious meals while also maintaining a busy lifestyle.</p>
+      <p>I Can Cook offers simple solutions to unhealthy eating habits while also ensuring that the outcome is still pleasant. We find websites that offer these recipes and provide direct links to them.</p>
+      <p>The preparations for these meals are not too long or complicated. We ensure that the ingredients are common and easy to access.</P> 
+      <p>Our aim is to help people find ways to enjoy their food even when they may not have the resources or the time to prepare complex meals that require rare and expensive components.</p>
+    </div>
+    <div class="container" id="container">
+      <div class="form-container sign-up-container">
+        <form action="#" onsubmit="validateTheForm()">
+          <h1>Create Account</h1>
+          <input type="text" placeholder="Name" id="Name" required/>
+          <input type="email" placeholder="Email" id="Email" required/>
+          <input type="password" placeholder="Password" id="Password" required />
+          <button type="submit">Sign Up</button>
+        </form>
       </div>
-      <div class="container" id="container">
-        <div class="form-container sign-up-container">
-          <form action="#" onsubmit="return validateTheForm()">
-            <h1>Create Account</h1>
-            <input type="text" placeholder="Name" id="Name" required/>
-            <input type="email" placeholder="Email" id="Email" required/>
-            <input type="password" placeholder="Password" id="Password" required />
-            <button type="submit">Sign Up</button>
-          </form>
-        </div>
   <!---Container for sign in form-->
         <div class="form-container sign-in-container">
           <form action="#" onsubmit="return validateTheForm2()">
