--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/css/recipes.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -12,7 +12,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2 style="text-align: center;">Flour & Grains</h2>
+          <h2>Flour & Grains</h2>
           <fieldset>
             <input type="radio" name="rice" id="rice" value="rice">
             <label for="rice">Rice</label></br>
@@ -20,8 +20,8 @@
             <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
             <input type="radio" name="mflour" id="maizeFlour" value="maizeFlour">
             <label for="maizeFlour">MaizeFlour</label></br>
-            <input type="radio" name="spaghetti" id="spaghetti" value="spaghetti">
-            <label for="spaghetti">Spaghetti</label></br>
+            <input type="radio" name="pasta" id="pasta" value="pasta">
+            <label for="spaghetti">Pasta</label></br>
             <input type="radio" name="beans" id="beans" value="beans">
             <label for="beans">Beans</label></br>
             <input type="radio" name="lentils" id="lentils" value="lentils">
@@ -29,7 +29,9 @@
             <input type="radio" name="blackbeans" id="blackbeans" value="blackbeans">
             <label for="blackbeans">Black Beans</label>
           </fieldset>
-          <h2 style="text-align: center;">Dairy</h2>
+        </div>
+        <div class="col-md-6">
+          <h2>Dairy</h2>
           <fieldset>
             <input type="radio" name="milk" id="milk" value="milk">
             <label for="milk">Milk</label></br>
@@ -44,7 +46,11 @@
             <input type="radio" name="coconutMilk" id="coconutMilk" value="coconutMilk">
             <label for="coconutMilk">Coconut Milk</label></br>
           </fieldset>
-          <h2 style="text-align: center;">Vegetables</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Vegetables</h2>
           <fieldset>
             <input type="radio" name="Tomatoes" id="tomatoes" value="tomatoes">
             <label for="tomatoes">Tomatoes</label></br>
@@ -65,48 +71,35 @@
             <input type="radio" name="Tangawizi" id="tangawizi" value="tangawizi">
             <label for="tangawizi">Tangawizi</label></br>
           </fieldset>
-          <h3 style="text-align: center;">Meat</h3>
+        </div>
+        <div class="col-md-6">
+          <h3>Meat</h3>
           <fieldset>
             <input type="radio" id="chicken" name="chicken" value="chicken">
             <label for="chicken">Chicken</label><br>
             <input type="radio" id="bacon" name="bacon" value="bacon">
             <label for="bacon">Bacon</label><br>
             <input type="radio" id="beef" name="beef" value="beef">
-            <label for="bacon">Bacon</label><br>
+            <label for="bacon">Beef</label><br>
             <input type="radio" id="fish" name="fish" value="fish">
             <label for="fish">Fish</label><br>
             <input type="radio" id="pork" name="pork" value="pork">
             <label for="pork">Pork</label><br>
           </fieldset>
         </div>
-      </fieldset>
-      <div id="button">
-        <button type="btn btn-primary" id="submit" onclick="checkOut()">Submit</button>
       </div>
-      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Results</button>
-      <!-- Modal -->
-      <!-- <div id="myModal" class="modal fade" role="dialog">
-        <!-- <div class="modal-dialog">
-          <!-- Modal content-->
-          <!-- <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Modal Header</h4>
-            </div>
-            <div class="modal-body">
-              beef<a href=" https://www.allrecipes.com/recipe/17325/savory-garlic-marinated-steaks/?internalSource=streams&referringId=475&referringContentType=Recipe%20Hub&clickId=st_trending_s " ><> <br>
-                Chicken <a href=" https://recipes.timesofindia.com/recipes/masala-chicken/rs54673639.cms,">
-                "Bacon" : "https://www.thespruceeats.com/how-to-make-your-own-bacon-4146515",
-                "Fish": "https://www.gimmesomeoven.com/cook-whole-fish/",
-                "pork" : "https://kenyayote.com/procedure-cooking-wet-fry-pork-meal-kenyan-recipe/", </p></a>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div> -->
-      
-        </div> --> -->
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <button type="btn btn-dark" id="submit">Submit</button>
+        </div>
+        <div class="col-md-3">
+          <div id="links">
+            Your recipe will be here....
+          </div>
+        </div>
       </div>
+    </div> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="../js/recipes.js"></script>
