Change input button from radio to checkbox, create links array and use .push to add links to the array if the set conditions evaluate as true

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -14,36 +14,36 @@
         <div class="col-md-6">
           <h2>Flour & Grains</h2>
           <fieldset>
-            <input type="radio" name="rice" id="rice" value="rice">
+            <input type="checkbox" name="rice" id="rice" value="rice">
             <label for="rice">Rice</label></br>
-            <input type="radio" name="flour" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
+            <input type="checkbox" name="flour" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
             <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
-            <input type="radio" name="mflour" id="maizeFlour" value="maizeFlour">
+            <input type="checkbox" name="mflour" id="maizeFlour" value="maizeFlour">
             <label for="maizeFlour">MaizeFlour</label></br>
-            <input type="radio" name="pasta" id="pasta" value="pasta">
+            <input type="checkbox" name="pasta" id="pasta" value="pasta">
             <label for="spaghetti">Pasta</label></br>
-            <input type="radio" name="beans" id="beans" value="beans">
+            <input type="checkbox" name="beans" id="beans" value="beans">
             <label for="beans">Beans</label></br>
-            <input type="radio" name="lentils" id="lentils" value="lentils">
+            <input type="checkbox" name="lentils" id="lentils" value="lentils">
             <label for="lentils">Lentils</label></br>
-            <input type="radio" name="blackbeans" id="blackbeans" value="blackbeans">
+            <input type="checkbox" name="blackbeans" id="blackbeans" value="blackbeans">
             <label for="blackbeans">Black Beans</label>
           </fieldset>
         </div>
         <div class="col-md-6">
           <h2>Dairy</h2>
           <fieldset>
-            <input type="radio" name="milk" id="milk" value="milk">
+            <input type="checkbox" name="milk" id="milk" value="milk">
             <label for="milk">Milk</label></br>
-            <input type="radio" name="eggs" id="eggs" value="eggs">
+            <input type="checkbox" name="eggs" id="eggs" value="eggs">
             <label for="eggs">Eggs</label></br>
-            <input type="radio" name="cheddar" id="cheddar" value="cheddar">
+            <input type="checkbox" name="cheddar" id="cheddar" value="cheddar">
             <label for="cheddar">Cheddar</label></br>
-            <input type="radio" name="parmesan" id="parmesan" value="parmesan">
+            <input type="checkbox" name="parmesan" id="parmesan" value="parmesan">
             <label for="parmesan">Parmesan</label></br>
-            <input type="radio" name="yogurt" id="yogurt" value="yogurt">
+            <input type="checkbox" name="yogurt" id="yogurt" value="yogurt">
             <label for="yogurt">Yogurt</label></br>
-            <input type="radio" name="coconutMilk" id="coconutMilk" value="coconutMilk">
+            <input type="checkbox" name="coconutMilk" id="coconutMilk" value="coconutMilk">
             <label for="coconutMilk">Coconut Milk</label></br>
           </fieldset>
         </div>
@@ -52,38 +52,38 @@
         <div class="col-md-6">
           <h2>Vegetables</h2>
           <fieldset>
-            <input type="radio" name="Tomatoes" id="tomatoes" value="tomatoes">
+            <input type="checkbox" name="Tomatoes" id="tomatoes" value="tomatoes">
             <label for="tomatoes">Tomatoes</label></br>
-            <input type="radio" name="Cabbage" id="cabbage" value="cabbage">
+            <input type="checkbox" name="Cabbage" id="cabbage" value="cabbage">
             <label for="cabbage">Cabbage</label></br>
-            <input type="radio" name="Brocolli" id="brocolli" value="brocolli">
+            <input type="checkbox" name="Brocolli" id="brocolli" value="brocolli">
             <label for="brocolli">Brocolli</label></br>
-            <input type="radio" name="Cauliflower" id="cauliflower" value="cauliflower">
+            <input type="checkbox" name="Cauliflower" id="cauliflower" value="cauliflower">
             <label for="cauliflower">Cauliflower</label></br>
-            <input type="radio" name="Spinach" id="spinach" value="spinach">
+            <input type="checkbox" name="Spinach" id="spinach" value="spinach">
             <label for="spinach">Spinach</label></br>
-            <input type="radio" name="Sukuma" id="sukuma" value="sukuma">
+            <input type="checkbox" name="Sukuma" id="sukuma" value="sukuma">
             <label for="sukuma">Sukuma</label></br>
-            <input type="radio" name="Onion" id="onion" value="onion">
+            <input type="checkbox" name="Onion" id="onion" value="onion">
             <label for="onion">Onion</label></br>
-            <input type="radio" name="Garlic" id="garlic" value="garlic">
+            <input type="checkbox" name="Garlic" id="garlic" value="garlic">
             <label for="garlic">Garlic</label></br>
-            <input type="radio" name="Tangawizi" id="tangawizi" value="tangawizi">
+            <input type="checkbox" name="Tangawizi" id="tangawizi" value="tangawizi">
             <label for="tangawizi">Tangawizi</label></br>
           </fieldset>
         </div>
         <div class="col-md-6">
           <h3>Meat</h3>
           <fieldset>
-            <input type="radio" id="chicken" name="chicken" value="chicken">
+            <input type="checkbox" id="chicken" name="chicken" value="chicken">
             <label for="chicken">Chicken</label><br>
-            <input type="radio" id="bacon" name="bacon" value="bacon">
+            <input type="checkbox" id="bacon" name="bacon" value="bacon">
             <label for="bacon">Bacon</label><br>
-            <input type="radio" id="beef" name="beef" value="beef">
+            <input type="checkbox" id="beef" name="beef" value="beef">
             <label for="bacon">Beef</label><br>
-            <input type="radio" id="fish" name="fish" value="fish">
+            <input type="checkbox" id="fish" name="fish" value="fish">
             <label for="fish">Fish</label><br>
-            <input type="radio" id="pork" name="pork" value="pork">
+            <input type="checkbox" id="pork" name="pork" value="pork">
             <label for="pork">Pork</label><br>
           </fieldset>
         </div>
