Edit About Us and fix misspelled words

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -18,10 +18,10 @@
             <label for="rice">Rice</label></br>
             <input type="checkbox" name="flour" id="allPurposeWheatFlour" value="allPurposeWheatFlour">
             <label for="allPurposeWheatFlour">All Purpose Wheat Flour</label></br>
-            <input type="checkbox" name="mflour" id="maizeFlour" value="maizeFlour">
+            <input type="checkbox" name="maizeFlour" id="maizeFlour" value="maizeFlour">
             <label for="maizeFlour">MaizeFlour</label></br>
             <input type="checkbox" name="pasta" id="pasta" value="pasta">
-            <label for="spaghetti">Pasta</label></br>
+            <label for="pasta">Pasta</label></br>
             <input type="checkbox" name="beans" id="beans" value="beans">
             <label for="beans">Beans</label></br>
             <input type="checkbox" name="lentils" id="lentils" value="lentils">
@@ -52,23 +52,23 @@
         <div class="col-md-6">
           <h2>Vegetables</h2>
           <fieldset>
-            <input type="checkbox" name="Tomatoes" id="tomatoes" value="tomatoes">
+            <input type="checkbox" name="tomatoes" id="tomatoes" value="tomatoes">
             <label for="tomatoes">Tomatoes</label></br>
-            <input type="checkbox" name="Cabbage" id="cabbage" value="cabbage">
+            <input type="checkbox" name="cabbage" id="cabbage" value="cabbage">
             <label for="cabbage">Cabbage</label></br>
-            <input type="checkbox" name="Brocolli" id="brocolli" value="brocolli">
+            <input type="checkbox" name="brocolli" id="brocolli" value="brocolli">
             <label for="brocolli">Brocolli</label></br>
-            <input type="checkbox" name="Cauliflower" id="cauliflower" value="cauliflower">
+            <input type="checkbox" name="cauliflower" id="cauliflower" value="cauliflower">
             <label for="cauliflower">Cauliflower</label></br>
-            <input type="checkbox" name="Spinach" id="spinach" value="spinach">
+            <input type="checkbox" name="spinach" id="spinach" value="spinach">
             <label for="spinach">Spinach</label></br>
-            <input type="checkbox" name="Sukuma" id="sukuma" value="sukuma">
+            <input type="checkbox" name="sukuma" id="sukuma" value="sukuma">
             <label for="sukuma">Sukuma</label></br>
-            <input type="checkbox" name="Onion" id="onion" value="onion">
+            <input type="checkbox" name="onion" id="onion" value="onion">
             <label for="onion">Onion</label></br>
-            <input type="checkbox" name="Garlic" id="garlic" value="garlic">
+            <input type="checkbox" name="garlic" id="garlic" value="garlic">
             <label for="garlic">Garlic</label></br>
-            <input type="checkbox" name="Tangawizi" id="tangawizi" value="tangawizi">
+            <input type="checkbox" name="tangawizi" id="tangawizi" value="tangawizi">
             <label for="tangawizi">Tangawizi</label></br>
           </fieldset>
         </div>
@@ -80,7 +80,7 @@
             <input type="checkbox" id="bacon" name="bacon" value="bacon">
             <label for="bacon">Bacon</label><br>
             <input type="checkbox" id="beef" name="beef" value="beef">
-            <label for="bacon">Beef</label><br>
+            <label for="beef">Beef</label><br>
             <input type="checkbox" id="fish" name="fish" value="fish">
             <label for="fish">Fish</label><br>
             <input type="checkbox" id="pork" name="pork" value="pork">
