--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d block w-100" src="images/food1.jpg" height="800vh">
+            <img class="d block w-100" src="images/food1.jpg" height="800vh" alt="Picture of pilau">
             <Ol class="nav">
               <div class="first">
                 <li><a href="file:///HOME/lisa/Desktop/projects/recipes/recipes.html">HOME</a></li>
@@ -50,7 +50,7 @@
               </div>
             </Ol>
             <div class="tit">Welcome to I Can Cook</div>
-            <div class="two" style="text-align: center;">"Cooking has become one of my favorite pasttimes since..."</div>
+            <div class="two" style="text-align: center;">"Cooking has become one of my favorite pasttimes since..."></div>
           </div>
           <div class="carousel-item">
             <img class="d block w-100" src="images/food3.jpg" height="800vh" alt="Picture of Ugali and Stew">
@@ -64,7 +64,7 @@
             <div class="three" style="text-align: center;">"Everybody loves my food"</div>
           </div>
           <div class="carousel-item">
-            <img class="d block w-100" src="images/food4.jpg" height="800vh" alt="Picture of rice and chicken">
+            <img class="d block w-100" src="images/food4.jpg" height="800vh"alt="Picture of rice and chicken">
             <Ol class="nav">
               <div class="first">
                 <li><a href="recipes/recipes.html">HOME</a></li>
@@ -84,9 +84,9 @@
     </div>
     <div id="about">
       <h2 style="padding-top: 30px; font-size: 30px; text-align: center;">About Us</h2>
-      <p>We are an online community that understands the struggle of  preparing healthy, nutricious meals while also maintaining a busy lifestyle.</p>
-      <p>I Can Cook offers simple solutions to unhealthy eating habits while also ensuring that the outcome is still pleasant. We find websites that offer these recipes and provide direct links to them.</p>
-      <p>The preparations for these meals are not too long or complicated. We ensure that the ingredients are common and easy to access.</P> 
+      <p>We are an online community that understands the struggle of  preparing healthy, nutritious meals while also maintaining a busy lifestyle.</p>
+      <p>We offer a simple solution to unhealthy eating habits by easing our users' access to multiple recipe websites.</p>
+      <p>The meals' recipe instructions  are easy to follow and the ingredients they use are common and easy to find and affordable.</P> 
       <p>Our aim is to help people find ways to enjoy their food even when they may not have the resources or the time to prepare complex meals that require rare and expensive components.</p>
     </div>
     <div class="container" id="container">
