Change body height to display container

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -6,9 +6,18 @@
     <link href="/css/recipes.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+
+    <Ol class="nav">
+      <div class="first">
+        <li><a href="recipes/recipes.html">HOME</a></li>
+        <li><a href="recipes/recipes.html">RECIPES</a></li>
+      </div>
+    </Ol>
+
+
     <div class="container">
       <div class="title">
-        <h1 style="color:white;">Recipes</h1>
+        <h1 style="color:white;margin-bottom: 20px;">Recipes</h1>
       </div>
       <div class="row">
         <div class="col-md-6">
