--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="recipes/recipes.html">RECIPES</a></li>
               </div>
             </Ol>
-            <div class="tit">I Can Cook</div>
+            <div class="tit">ICanCook</div>
             <div class="one" style="text-align: center;">"This website has transformed my life"</div>
           </div>
           <div class="carousel-item">
@@ -49,8 +49,8 @@
                 <li><a href="recipes/recipes.html">RECIPES</a></li>
               </div>
             </Ol>
-            <div class="tit">Welcome to I Can Cook</div>
-            <div class="two" style="text-align: center;">"Cooking has become one of my favorite pasttimes since..."></div>
+            <div class="tit">ICanCook</div>
+            <div class="two" style="text-align: center;">"Cooking has become one of my favorite pasttimes since..."</div>
           </div>
           <div class="carousel-item">
             <img class="d block w-100" src="images/food3.jpg" height="800vh" alt="Picture of Ugali and Stew">
@@ -60,18 +60,18 @@
                 <li><a href="recipes/recipes.html">RECIPES</a></li>
               </div>
             </Ol>
-            <div class="tit">I Can Cook</div>
+            <div class="tit">ICanCook</div>
             <div class="three" style="text-align: center;">"Everybody loves my food"</div>
           </div>
           <div class="carousel-item">
-            <img class="d block w-100" src="images/food4.jpg" height="800vh"alt="Picture of rice and chicken">
+            <img class="d block w-100" src="images/food5.jpg" height="800vh"alt="Picture of rice and chicken">
             <Ol class="nav">
               <div class="first">
                 <li><a href="recipes/recipes.html">HOME</a></li>
                 <li><a href="recipes/recipes.html">RECIPES</a></li>
               </div>
             </Ol>
-            <div class="tit"> I Can Cook</div>
+            <div class="tit">ICanCook</div>
             <div class="four" style="text-align: center;">"Preparing healthy meals is much more fun nowadays"</div>
           </div>
         </div>
@@ -82,6 +82,9 @@
 
       </div>
     </div>
+
+
+
     <div id="about">
       <h2 style="padding-top: 30px; font-size: 30px; text-align: center;">About Us</h2>
       <p>We are an online community that understands the struggle of  preparing healthy, nutritious meals while also maintaining a busy lifestyle.</p>
