--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -10,14 +10,14 @@
     <Ol class="nav">
       <div class="first">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="recipes/recipes.html">RECIPES</a></li>
+        <li><a href="/recipes/recipes.html">RECIPES</a></li>
       </div>
     </Ol>
 
 
     <div class="container">
       <div class="title">
-        <h1 style="color:white;margin-bottom: 20px;">Recipes</h1>
+        <h1>Recipes</h1>
       </div>
       <div class="row">
         <div class="col-md-6">
