--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -9,7 +9,7 @@
 
     <Ol class="nav">
       <div class="first">
-        <li><a href="index.html">HOME</a></li>
+        <li><a href="https://waithera-m.github.io/ICanCook/">HOME</a></li>
         <li><a href="/recipes/recipes.html">RECIPES</a></li>
       </div>
     </Ol>
